# pyEntropy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CAHNGELOG.md  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  entropy.py  pyproject.toml  requirements.txt  setup.py  test_entropy.py
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
.pytest_cache/v/cache/: nodeids
pyentrp/: entropy.py
tests/: test_entropy.py
