[tool.poetry]
name = "pyentrp"
version = "1.0.0"
description = "A Python library for computing entropy measures for time series analysis."
authors = ["Nikolay Donets <nd@donets.org>"]
license = "apache-2.0"
readme = "README.md"
packages = [
  {"include" = "pyentrp"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.26,<3.0"


[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
codecov = "^2.1.13"
commitizen = ">=3.2.2,<5.0.0"
pre-commit = ">=3.3.2,<5.0.0"
ruff = ">=0.5.0,<0.9.5"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "setup.py:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
unfixable = []
select = [
  # isort
  "I",
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PLC", "PLE", "PLR", "PLW",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # type-checking imports
  "TCH",
  # comprehensions
  "C4",
  # pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
  # NumPy-specific rules
  "NPY",
  # pydocstyle
  "D",
]
ignore = [
  "D100", "D104",
  "D203", "D213"
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D101", "D102", "D103"]
